--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hello world</h1>
     <h2>Iam not a programmer</h2>
-    <h2>Iam programmer</h2>
+    <p>Iam paragraph</p>
 </body>
 </html>
