--- a/app.html
+++ b/app.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <section>Iam section</section>
     <h3>Hello iam h3</h3>
     <p>paragraph</p>
     <p>2nd para</p>
-</body>
+    <p>this is input field label</p>
+    <input type="text" placeholder="thi is input" />
+  </body>
 </html>
