--- a/app.html
+++ b/app.html
@@ -13,5 +13,6 @@
     <p>2nd para</p>
     <p>this is input field label</p>
     <input type="text" placeholder="thi is input" />
+    <input type="text" placeholder="name" />
   </body>
 </html>
