--- a/app.html
+++ b/app.html
@@ -14,5 +14,6 @@
     <p>this is input field label</p>
     <input type="text" placeholder="thi is input" />
     <input type="text" placeholder="name" />
+    <input type="text" placeholder="email" />
   </body>
 </html>
