--- a/app.html
+++ b/app.html
@@ -17,7 +17,7 @@
     <input type="text" placeholder="email" />
     <p>hdhfdhfh</p>
     <p>hsdfhisafisaf</p>
-
+    <input type="text" placeholder="Enter name"/>
     <h1>ksdfsjfklsklfkls</h1>
   </body>
 </html>
